# python_with_rust

./: Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
examples/: example1.py  example2.py  example3.py  example4.py
my_rust_project/: Cargo.toml
my_rust_project/src/: lib.rs
my_rust_project1/: Cargo.toml
my_rust_project1/src/: lib.rs
src/: lib.rs
